--- a/.github/workflows/move-cli.yml
+++ b/.github/workflows/move-cli.yml
@@ -103,3 +103,40 @@ jobs:
           tag_name: ${{ github.event.inputs.version || github.event.workflow_run.head_branch }}
           files: initia-move-cli-*.tar.gz
 
+  docker-build-push:
+    needs: [linux-build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download Linux AMD64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: x86_64-unknown-linux-gnu-build
+          path: tools/initia-move-cli
+
+      - name: Extract binary
+        run: |
+          cd tools/initia-move-cli
+          tar -xzvf initia-move-cli-*.tar.gz
+          rm initia-move-cli-*.tar.gz
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: tools/initia-move-cli
+          file: tools/initia-move-cli/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/initia-move-cli:latest
+            ghcr.io/${{ github.repository_owner }}/initia-move-cli:${{ github.event.inputs.version || github.event.workflow_run.head_branch }}
