--- a/tools/initia-move-cli/Cargo.toml
+++ b/tools/initia-move-cli/Cargo.toml
@@ -22,3 +22,6 @@ path = "src/main.rs"
 anyhow.workspace = true
 clap.workspace = true
 initia-move-compiler.workspace = true
+movevm.workspace = true
+serde.workspace = true
+serde_json.workspace = true
